@@ -13,7 +13,7 @@ my $parms = {
         'HTTP::Server::Simple'      => '0.35',
         'HTTP::Server::Simple::CGI' => 0,
         'Test::Builder::Tester'     => '1.09',
-        'Test::LongString'          => '0.07',
+        'Test::LongString'          => '0.12',
         'Test::More'                => 0,
         'URI::file'                 => 0,
         'WWW::Mechanize'            => '1.24',
