@@ -32,9 +32,11 @@ $mech->content_contains( 'Test Page');
 test_test( 'Finds the contains - default desc' );
 
 test_out( 'not ok 1 - Where is Mungo?' );
-test_fail(+3);
+test_fail(+5);
 test_diag(q(    searched: "<html>\x{0a}  <head>\x{0a}    <title>Test Page</title>\x{0a}  </h"...) );
 test_diag(q(  can't find: "Mungo") );
+test_diag(q(        LCSS: "go"));
+test_diag(q(LCSS context: "ead>\x{0a}  <body>\x{0a}  <h1>Test Page</h1>\x{0a}    <a href='go"));
 $mech->content_contains( 'Mungo', 'Where is Mungo?' );
 test_test( 'Handles not finding it' );
 
